<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dash"
            android:icon="@drawable/ic_side_menu_dashboard"
            android:title="@string/side_menu_dash" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_side_menu_edit_profile"
            android:title="@string/side_menu_profile" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_side_menu_category"
            android:title="@string/side_menu_category" />

        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_side_menu_wishlist"
            android:title="@string/side_menu_wishlist" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_side_menu_order_history"
            android:title="@string/side_menu_order" />

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_side_menu_wallet"
            android:title="@string/side_menu_wallet" />

        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/ic_side_menu_address"
            android:title="@string/side_menu_address" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_side_menu_settings"
            android:title="@string/side_menu_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_side_menu_logout"
            android:title="@string/side_menu_logout" />

    </group>

</menu>