<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_toolbar"
            style="@style/ToolBarStyle.Event"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@drawable/gradient_bg"
            android:minHeight="@dimen/abc_action_bar_default_height_material"
            android:theme="@style/ThemeOverlay.MyApp.ActionBar" />

        <RelativeLayout
            android:id="@+id/adv_pay_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/activity_toolbar"
            android:layout_margin="40dp"
            android:visibility="gone"
            android:background="@drawable/shadow_round"
            android:elevation="6dp"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/disp_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/payment_icon"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    />

                <TextView
                    android:id="@+id/adv_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/payment_icon"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/advance_amount"
                    android:textStyle="bold"
                    android:textColor="@color/color_primary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/amount_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/adv_txt"
                    android:layout_centerHorizontal="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/disp_layout"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/pay_button"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wallet_pay_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/activity_toolbar"
            android:layout_margin="40dp"
            android:visibility="gone"
            android:background="@drawable/shadow_round"
            android:elevation="6dp"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/wallet_disp_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/wallet_payment_icon"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/wallet_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/wallet_payment_icon"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/amount"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:textColor="@color/color_primary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/wallet_amount_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wallet_txt"
                    android:layout_centerHorizontal="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/wallet_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wallet_disp_layout"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/pay_button"
                android:textColor="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/serv_pay_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_toolbar"
            android:visibility="gone"
            android:layout_margin="20dp"
            android:background="@drawable/shadow_round"
            android:elevation="6dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:id="@+id/online_layout"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/online_payment_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/pay_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/online_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/pay_button_online"
                android:textColor="@color/white" />

            <RelativeLayout
                android:id="@+id/cash_layout"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cash_payment_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/pay_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_marginBottom="20dp"
                android:onClick="onCashClick"
                android:text="@string/pay_button_cash"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/access_code" />

            <EditText
                android:id="@+id/accessCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/access_code_value">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/merchant_id" />

            <EditText
                android:id="@+id/merchantId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/merchant_id_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="Order Id" />

            <EditText
                android:id="@+id/orderId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/currency" />

            <EditText
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="INR" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="1.00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/redirect_url" />

            <EditText
                android:id="@+id/redirectUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="" />
            <!--http://122.182.6.216/merchant/ccavResponseHandler.jsp-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/cancel_url" />

            <EditText
                android:id="@+id/cancelUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="@string/redirect_url_advance" />
            <!--http://122.182.6.216/merchant/ccavResponseHandler.jsp-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/rsa_url" />

            <EditText
                android:id="@+id/rsaUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="@string/rsa_url_value" />
            <!--https://secure.ccavenue.com/transaction/jsp/GetRSA.jsp-->

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="48dp"
                android:onClick="onClick"
                android:text="@string/pay_button" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>