<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_toolbar"
        style="@style/ToolBarStyle.Event"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient_bg"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:theme="@style/ThemeOverlay.MyApp.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wallet_bal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0000"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:fontFamily="@font/semibold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/wallet_bal_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallet_amt"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/medium"
            android:textColor="@color/text_black"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/lite_grey"
            android:layout_below="@+id/wallet_bal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/medium"
            android:text="Topup Wallet"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/add_amount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/btn_square_border"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:paddingStart="20dp"
            android:fontFamily="@font/regular"
            android:singleLine="true"
            android:textSize="20sp"
            app:prefixText="+91" />

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/add_amount"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_size_color"
            android:gravity="center"
            android:fontFamily="@font/medium"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/wallet_add"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>